# ARADHYA

./: .env.example  .gitignore  AGENTS.md  BEFORE_AFTER.md  CONTRIBUTING.md  README.md  SECURITY.md  WINDOWS_SETUP_GUIDE.md  aradhya.bat  design_guidelines.json  environment_info.txt  gap_analysis.md  project_tree.txt  pyproject.toml  requirements-dev.txt  requirements-voice-activation.txt  requirements-voice.txt  requirements-windows.txt  requirements.txt  setup_aradhya_windows.py
.github/workflows/: ci.yml
audio/: README.md
backend/: .env.example  requirements.txt  server.py
core/agent/: aradhya.py
core/memory/: preferences.json  profile.json
docs/: ARCHITECTURE.md  OI_ROADMAP.md  OI_VISION.md  OPERATING_GUIDE.md  README.md
docs/phases/: phase1.md  phase2.md  phase3.md
docs/research/: BIG_TECH_MECHANISMS_MATRIX.md  FEATURE_RESEARCH_PROMPTS.md  OPTIMIZATION_BACKLOG.md  README.md
docs/review_prompts/: README.md  WINDOWS_CODE_IMPROVEMENT_PROMPT.md  WINDOWS_FIRST_RUN_REVIEW_PROMPT.md
frontend/: .eslintrc.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  api.js  index.css
memory/: PRD.md
scripts/: activate_env.bat  doctor.bat  first_run.bat  first_run_fullstack.bat  run_agent.bat  run_fullstack.bat  run_tests.bat  setup.bat
src/aradhya/: __init__.py  agent_loop.py  assistant_core.py  assistant_indexer.py  assistant_models.py  assistant_planner.py  assistant_system_tools.py  audit_logger.py  cache_diagnostics.py  cli_ui.py  context_engine.py  daemon.py  daemon_api.py  floating_icon.py  floating_shell.py  (+18 more)
(+50 files in other folders)
