[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aradhya"
version = "0.1.0"
description = "AI Assistant Project"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
aradhya = "src.aradhya.main:main"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov=core --cov-report=html"
